ott-vpc-prd-ec2.yaml
Description:
  This template deploys a VPC for OTT PROD

Parameters:
  EnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String
    Default: AA-OTT-PRD

  myKeyPair: 
    Description: Amazon EC2 Key Pair
    Type: "AWS::EC2::KeyPair::KeyName"
    Default: AA-TEST-W2

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.140.160.0/19

  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for 176-MGMT-A
    Type: String
    Default: 10.140.176.0/24
  
  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for 177-PRD-B
    Type: String
    Default: 10.140.177.0/24

  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
    - t1.micro
    - t2.micro
    - m1.small
    - m1.medium

Mappings: 
 RegionMap: 
  "us-east-1": 
   AMI: "ami-0fba9b33b5304d8b4"
  "us-east-2": 
   AMI: "ami-0e04554247365d806"
  "us-west-1": 
   AMI: "ami-0ad16744583f21877"

Resources:

  InstanceSecurityGroup: 
    Type: "AWS::EC2::SecurityGroup"
    Properties: 
      VpcId: {"Fn::ImportValue" : {"Fn::Sub" : "${EnvironmentName}-VPC"}}
      GroupDescription: "Enable SSH and HTTP access via port 22 and 80"
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} SG-SSH-HTTP  

  InsideInstance1: 
    Type: "AWS::EC2::Instance"
    Properties: 
      ImageId: { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "AMI" ]}
      SubnetId: {"Fn::ImportValue" : {"Fn::Sub" : "${EnvironmentName}-PrivateSubnet1"}}
      InstanceType: 
        Ref: InstanceType
      SecurityGroupIds: 
        - Ref: InstanceSecurityGroup
      KeyName: !Ref myKeyPair
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} InsideInstance1
